syntax = "proto3";
option java_package = "com.proto.prime";
option java_multiple_files = true;

service AuthenticationService {
  rpc SignInDecomposition(SignInRequest) returns (SignInResponse) {};
  rpc CreateUserDecomposition(SignInRequest) returns (SignInResponse) {};
  rpc CheckUserExists(CheckUserExistRequest) returns (CheckUserExistResponse) {};
  rpc GetUserInfo(GetUserRequest) returns (GetUserResponse) {};
}

message CheckUserExistRequest {
  string _id = 1;
}

message CheckUserExistResponse {
  bool isSuccess = 1;
}

message IngredientUserRequest {
  string name = 1;
  int32 quantity = 2;
  string unit = 3;
}

message BeerUserRequest {
  string _id = 1;
  string name = 2;
  string description = 3;
  repeated IngredientUserRequest ingredients = 4;
  repeated string methods = 5;
  string imageUrl = 6;
  string userId = 7;
}

message SignInRequest {

  string googleId = 1;
  repeated BeerUserRequest favorite = 2;
  repeated BeerUserRequest owner = 3;
  string firstName = 4;
  string lastName = 5;
  string email = 6;
  string imageUrl = 7;

}

message SignInResponse {

  bool isSuccess = 1;

}

message IngredientUserInfo {
  string name = 1;
  int32 quantity = 2;
  string unit = 3;
}

message BeerUserInfo {
  string _id = 1;
  string name = 2;
  string description = 3;
  repeated IngredientUserInfo ingredients = 4;
  repeated string methods = 5;
  string imageUrl = 6;
  string userId = 7;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  string googleId = 1;
  repeated BeerUserInfo favoritie = 2;
  repeated BeerUserInfo owner = 3;
  string firstName = 4;
  string lastName = 5;
  string email = 6;
  string imageUrl = 7;
}


